@@ -1,6 +1,6 @@
 
 R : Copyright 2004, The R Foundation for Statistical Computing
-Version 1.9.0 Under development (unstable) (2004-01-07), ISBN 3-900051-00-3
+Version 1.9.0 Under development (unstable) (2004-01-08), ISBN 3-900051-00-3
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -3340,4 +3340,150 @@ attr(,"contrasts")$x
 Error: variable 'x' was fitted with numeric but logical was supplied
 > ## wrong answers in 1.8.0, refused to run in 1.8.1
 > 
+> 
+> 
+> ## failure to print data frame containing arrays
+> ## raised by John Fox on R-devel on 2004-01-08
+> y1 <- array(1:10, dim=10)
+> y2 <- array(1:30, dim=c(10,3), dimnames=list(NULL, letters[1:3]))
+> y3 <- array(1:40, dim=c(10,2,2),
++             dimnames=list(NULL, letters[1:2], NULL))
+> data.frame(y=y1)
+    y
+1   1
+2   2
+3   3
+4   4
+5   5
+6   6
+7   7
+8   8
+9   9
+10 10
+> data.frame(y=y2)
+   y.a y.b y.c
+1    1  11  21
+2    2  12  22
+3    3  13  23
+4    4  14  24
+5    5  15  25
+6    6  16  26
+7    7  17  27
+8    8  18  28
+9    9  19  29
+10  10  20  30
+> data.frame(y=y3)
+   y.a.1 y.b.1 y.a.2 y.b.2
+1      1    11    21    31
+2      2    12    22    32
+3      3    13    23    33
+4      4    14    24    34
+5      5    15    25    35
+6      6    16    26    36
+7      7    17    27    37
+8      8    18    28    38
+9      9    19    29    39
+10    10    20    30    40
+> 
+> as.data.frame(y1)
+   y1
+1   1
+2   2
+3   3
+4   4
+5   5
+6   6
+7   7
+8   8
+9   9
+10 10
+> as.data.frame(y2)
+    a  b  c
+1   1 11 21
+2   2 12 22
+3   3 13 23
+4   4 14 24
+5   5 15 25
+6   6 16 26
+7   7 17 27
+8   8 18 28
+9   9 19 29
+10 10 20 30
+> as.data.frame(y3)
+   a.1 b.1 a.2 b.2
+1    1  11  21  31
+2    2  12  22  32
+3    3  13  23  33
+4    4  14  24  34
+5    5  15  25  35
+6    6  16  26  36
+7    7  17  27  37
+8    8  18  28  38
+9    9  19  29  39
+10  10  20  30  40
+> 
+> X <- data.frame(x=1:10)
+> X$y <- y1
+> X
+    x  y
+1   1  1
+2   2  2
+3   3  3
+4   4  4
+5   5  5
+6   6  6
+7   7  7
+8   8  8
+9   9  9
+10 10 10
+> sapply(X, dim)
+$x
+NULL
+
+$y
+[1] 10
+
+> 
+> X$y <- y2
+> X
+    x y.a y.b y.c
+1   1   1  11  21
+2   2   2  12  22
+3   3   3  13  23
+4   4   4  14  24
+5   5   5  15  25
+6   6   6  16  26
+7   7   7  17  27
+8   8   8  18  28
+9   9   9  19  29
+10 10  10  20  30
+> sapply(X, dim)
+$x
+NULL
+
+$y
+[1] 10  3
+
+> 
+> X$y <- y3
+> X
+    x y.a.1 y.b.1 y.a.2 y.b.2
+1   1     1    11    21    31
+2   2     2    12    22    32
+3   3     3    13    23    33
+4   4     4    14    24    34
+5   5     5    15    25    35
+6   6     6    16    26    36
+7   7     7    17    27    37
+8   8     8    18    28    38
+9   9     9    19    29    39
+10 10    10    20    30    40
+> sapply(X, dim)
+$x
+NULL
+
+$y
+[1] 10  2  2
+
+> ## The last one fails in S.
 > 
